# test

./: classes.txt
TeacherClient/: CMakeLists.txt  Teacherclient.cpp  Types.h  groups.json  groupsdialog.cpp  groupsdialog.h  groupswidget.cpp  groupswidget.h  main.cpp  question.h  questiondialog.cpp  questiondialog.h  settingsdialog.cpp  settingsdialog.h  studentinfo.cpp  studentinfo.h  students.csv  students.json  studentselectionwidget.cpp  studentselectionwidget.h  taskdialog.cpp  taskdialog.h  teacherclient.h  testswidget.cpp  testswidget.h  variants.txt  variantselectiondialog.cpp  variantselectiondialog.h  variantswidget.cpp  variantswidget.h  код клиента преподавателя.txt
server/: CMakeLists.txt  defaultSettings.json  main.cpp  server.cpp  server.h  students_structure.json
server/build-server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
studentClient/: CMakeLists.txt  banyan.cpp  banyan.h  closa.cpp  closa.h  connection.cpp  connection.h  delta.cpp  delta.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  elementbutton.cpp  elementbutton.h  elementselector.cpp  elementselector.h  ioport.cpp  ioport.h  main.cpp  mainwindow.cpp  mainwindow.h  newgraphicsview.cpp  newgraphicsview.h  omega.cpp  omega.h  port.cpp  port.h  prioritysettingsdialog.cpp  prioritysettingsdialog.h  propertiestable.cpp  propertiestable.h  qconnection.cpp  qconnection.h  qioport.cpp  qioport.h  qport.cpp  qport.h  qswitchingelement.cpp  qswitchingelement.h  (+4 more)
